[gd_scene load_steps=12 format=3 uid="uid://dhqjeoarchrp5"]

[ext_resource type="Script" uid="uid://dyeutcfmyhlri" path="res://scripts/menu.gd" id="1_mhnvy"]
[ext_resource type="FontFile" uid="uid://bfqb0iyxyahdd" path="res://assets/font/kiwisoda/KiwiSoda.ttf" id="2_4ytvr"]
[ext_resource type="AudioStream" uid="uid://dnsef5arins8g" path="res://assets/audio/534347__orginaljun__funky-pixel-melody-loop.wav" id="3_g3eks"]
[ext_resource type="Texture2D" uid="uid://d0h2vp1m8705p" path="res://assets/UI_UX/Free_Menu_Buttons/Sprite_Png/option.png" id="3_v86rl"]
[ext_resource type="Texture2D" uid="uid://dqd7bsoonhhkd" path="res://assets/UI_UX/Free_Menu_Buttons/Sprite_Png/start.png" id="4_13sgg"]
[ext_resource type="Texture2D" uid="uid://cphah30h66t2w" path="res://assets/UI_UX/tinyRPG_manaSoulGUI_v_1_0/20250420manaSoul9SlicesA-Sheet.png" id="6_13sgg"]
[ext_resource type="Texture2D" uid="uid://b684c3fd2ohs0" path="res://assets/UI_UX/tinyRPG_manaSoulGUI_v_1_0/20250420manaSoulHeaderB-Sheet.png" id="7_i6lef"]
[ext_resource type="Texture2D" uid="uid://4nr4uh3xm8jo" path="res://assets/UI_UX/tinyRPG_manaSoulGUI_v_1_0/20250420manaSoul9SlicesC-Sheet.png" id="7_mj5lg"]
[ext_resource type="AudioStream" uid="uid://dhqil5ik13306" path="res://assets/audio/click.wav" id="7_v86rl"]

[sub_resource type="Gradient" id="Gradient_mae5d"]
colors = PackedColorArray(0.2, 0.0941176, 0.203922, 1, 0.129412, 0.317647, 0.388235, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4hy44"]
gradient = SubResource("Gradient_mae5d")

[node name="menu" type="CanvasLayer"]
script = ExtResource("1_mhnvy")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="titre" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 14.15
anchor_top = 4.85
anchor_right = 14.15
anchor_bottom = 4.85
offset_left = -286.0
offset_top = -71.25
offset_right = 286.0
offset_bottom = 12.75
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0.576471, 0.341176, 0.388235, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_4ytvr")
theme_override_font_sizes/font_size = 70
text = "La ForÃªt Fongique"
horizontal_alignment = 1
vertical_alignment = 1

[node name="instructions" type="Button" parent="Control"]
layout_mode = 0
offset_left = 216.0
offset_top = 336.0
offset_right = 379.0
offset_bottom = 382.0
scale = Vector2(2, 2)
focus_mode = 0
theme_override_fonts/font = ExtResource("2_4ytvr")
theme_override_font_sizes/font_size = 30
icon = ExtResource("3_v86rl")
flat = true

[node name="jouer" type="Button" parent="Control"]
layout_mode = 0
offset_left = 592.0
offset_top = 336.0
offset_right = 759.0
offset_bottom = 382.0
scale = Vector2(2, 2)
focus_mode = 0
theme_override_fonts/font = ExtResource("2_4ytvr")
theme_override_font_sizes/font_size = 30
text = "
"
icon = ExtResource("4_13sgg")
flat = true

[node name="TextureRect" type="TextureRect" parent="Control"]
z_index = -1
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2
texture = SubResource("GradientTexture2D_4hy44")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_g3eks")
autoplay = true

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(576, 320)
scale = Vector2(12, 6.66667)
texture = ExtResource("6_13sgg")

[node name="20250420ManaSoul9SlicesC-sheet" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(576, 376)
scale = Vector2(9.33333, 3.5)
texture = ExtResource("7_mj5lg")

[node name="header" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(576, 170.75)
scale = Vector2(12, 9.70454)
texture = ExtResource("7_i6lef")

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_v86rl")

[connection signal="pressed" from="Control/instructions" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="Control/jouer" to="." method="_on_jouer_pressed"]
